bynkc/tests/fixtures/negative/401_generic_sum_embeds/input.bynk
commons bad

type Inner = | A | B

-- #593: a generic sum may not carry an `embeds` clause.
type Wrap[T] =
  | Held(value: T)
  embeds Inner as Inner
